--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,6 +13,7 @@
         <div class="container">
             <div class="flex-block">
                 <div class="logo">
+                    <div class="icon icon-logo"></div>
                     <p>Строительство домов из</p>
                     <p>клееного бруса</p>
                 </div>
@@ -111,7 +112,7 @@
 
     <div class="catalog">
         <h3 class="catalog-title">Мы построим именно тот дом, о котором вы мечтали, осталось только выбрать</h3>
-        <h2 class="catalog-desc">Построить по одному из 150 готовых проектов или <br> заказать индивидуальный, уникальный проект дома</h2>
+        <h2 class="catalog-desc bold">Построить по одному из 150 готовых проектов или <br> заказать индивидуальный, уникальный проект дома</h2>
 
         <div class="options flex-block">
             <div class="options-buttons">
@@ -121,25 +122,23 @@
                 <button>10&#215;13</button>
                 <button>10&#215;15</button>
             </div>
-            <p>СМОТРЕТЬ ВСЕ ПРОЕКТЫ</p>
+            <p class="bold">смотреть все проекты</p>
         </div>
 
-        <div class="products">
+        <div class="products flex-block">
             <div class="products-item">
                 <img src="./assets/product1.png">
                 <div class="products-desc">
+                    <h4 class="product-title bold">Дом из клееного бруса, проект №2-128</h4>
                     <div class="products-content">
-                        <h4 class="product-title">Дом из клееного бруса, проект №2-128</h4>
-                        <button class="button-type">10&#215;10</button>
-                        <button class="button-desc">S=260 м.к.м.</button>
+                        <button class="button-type bold">10&#215;10</button>
+                        <button class="button-desc bold">S=260 м.к.м.</button>
                         <p class="product-options">Тип:</p>
                         <p class="product-options-desc">Двухэтажный с мансардой</p>
                         <p class="product-options">Срок строительства:</p>
                         <p class="product-options-desc">3 месяца</p>
                         <p class="product-options">Количество комнат:</p>
                         <p class="product-options-desc">12</p>
-                    </div>
-                    <div class="product-footer">
                         <span class="product-button">
                             <button>
                                 Посмотреть проект
@@ -148,15 +147,17 @@
                                 Посмотреть проект
                             </button>
                         </span>
+                    </div>
+                    <div class="product-footer">
+                        <div class="socials-buttons-up">
+                            <p class="buttons-up-title">Стоимость строительства от:</p>
+                            <p class="buttons-up-desc">4 890 000 ₽</p>
+                        </div>
                         <div class="product-socials">
                             <p class="product-socials-title">Задайте вопрос напрямую:</p>
                             <div class="socials-buttons">
                                 <button class="telegram"> <span class="icon-telegram"></span> Telegram</button>
                                 <button class="whatSapp"> <span class="icon-whatsapp"></span> WhatSApp</button>
-                            </div>
-                            <div class="socials-buttons-up">
-                                <p class="buttons-up-title">Стоимость строительства от:</p>
-                                <p class="buttons-up-desc">4 890 000 ₽</p>
                             </div>
                         </div>
                     </div>
@@ -165,18 +166,16 @@
             <div class="products-item">
                 <img src="./assets/product2.png">
                 <div class="products-desc">
+                    <h4 class="product-title bold">Дом из клееного бруса, проект №2-128</h4>
                     <div class="products-content">
-                        <h4 class="product-title">Дом из клееного бруса, проект №2-128</h4>
-                        <button class="button-type">10&#215;10</button>
-                        <button class="button-desc">S=260 м.к.м.</button>
+                        <button class="button-type bold">10&#215;10</button>
+                        <button class="button-desc bold">S=260 м.к.м.</button>
                         <p class="product-options">Тип:</p>
                         <p class="product-options-desc">Двухэтажный с мансардой</p>
                         <p class="product-options">Срок строительства:</p>
                         <p class="product-options-desc">3 месяца</p>
                         <p class="product-options">Количество комнат:</p>
                         <p class="product-options-desc">12</p>
-                    </div>
-                    <div class="product-footer">
                         <span class="product-button">
                             <button>
                                 Посмотреть проект
@@ -185,15 +184,17 @@
                                 Посмотреть проект
                             </button>
                         </span>
+                    </div>
+                    <div class="product-footer">
+                        <div class="socials-buttons-up">
+                            <p class="buttons-up-title">Стоимость строительства от:</p>
+                            <p class="buttons-up-desc">4 890 000 ₽</p>
+                        </div>
                         <div class="product-socials">
                             <p class="product-socials-title">Задайте вопрос напрямую:</p>
                             <div class="socials-buttons">
                                 <button class="telegram"> <span class="icon-telegram"></span> Telegram</button>
                                 <button class="whatSapp"> <span class="icon-whatsapp"></span> WhatSApp</button>
-                            </div>
-                            <div class="socials-buttons-up">
-                                <p class="buttons-up-title">Стоимость строительства от:</p>
-                                <p class="buttons-up-desc">4 890 000 ₽</p>
                             </div>
                         </div>
                     </div>
@@ -202,18 +203,16 @@
             <div class="products-item">
                 <img src="./assets/product3.png">
                 <div class="products-desc">
+                    <h4 class="product-title bold">Дом из клееного бруса, проект №2-128</h4>
                     <div class="products-content">
-                        <h4 class="product-title">Дом из клееного бруса, проект №2-128</h4>
-                        <button class="button-type">10&#215;10</button>
-                        <button class="button-desc">S=260 м.к.м.</button>
+                        <button class="button-type bold">10&#215;10</button>
+                        <button class="button-desc bold">S=260 м.к.м.</button>
                         <p class="product-options">Тип:</p>
                         <p class="product-options-desc">Двухэтажный с мансардой</p>
                         <p class="product-options">Срок строительства:</p>
                         <p class="product-options-desc">3 месяца</p>
                         <p class="product-options">Количество комнат:</p>
                         <p class="product-options-desc">12</p>
-                    </div>
-                    <div class="product-footer">
                         <span class="product-button">
                             <button>
                                 Посмотреть проект
@@ -222,21 +221,96 @@
                                 Посмотреть проект
                             </button>
                         </span>
+                    </div>
+                    <div class="product-footer">
+                        <div class="socials-buttons-up">
+                            <p class="buttons-up-title">Стоимость строительства от:</p>
+                            <p class="buttons-up-desc">4 890 000 ₽</p>
+                        </div>
                         <div class="product-socials">
                             <p class="product-socials-title">Задайте вопрос напрямую:</p>
                             <div class="socials-buttons">
                                 <button class="telegram"> <span class="icon-telegram"></span> Telegram</button>
                                 <button class="whatSapp"> <span class="icon-whatsapp"></span> WhatSApp</button>
                             </div>
-                            <div class="socials-buttons-up">
-                                <p class="buttons-up-title">Стоимость строительства от:</p>
-                                <p class="buttons-up-desc">4 890 000 ₽</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="products-item">
+                <img src="./assets/product4.png">
+                <div class="products-desc">
+                    <h4 class="product-title bold">Дом из клееного бруса, проект №2-128</h4>
+                    <div class="products-content">
+                        <button class="button-type bold">10&#215;10</button>
+                        <button class="button-desc bold">S=260 м.к.м.</button>
+                        <p class="product-options">Тип:</p>
+                        <p class="product-options-desc">Двухэтажный с мансардой</p>
+                        <p class="product-options">Срок строительства:</p>
+                        <p class="product-options-desc">3 месяца</p>
+                        <p class="product-options">Количество комнат:</p>
+                        <p class="product-options-desc">12</p>
+                        <span class="product-button">
+                            <button>
+                                Посмотреть проект
+                            </button>
+                            <button>
+                                Посмотреть проект
+                            </button>
+                        </span>
+                    </div>
+                    <div class="product-footer">
+                        <div class="socials-buttons-up">
+                            <p class="buttons-up-title">Стоимость строительства от:</p>
+                            <p class="buttons-up-desc">4 890 000 ₽</p>
+                        </div>
+                        <div class="product-socials">
+                            <p class="product-socials-title">Задайте вопрос напрямую:</p>
+                            <div class="socials-buttons">
+                                <button class="telegram"> <span class="icon-telegram"></span> Telegram</button>
+                                <button class="whatSapp"> <span class="icon-whatsapp"></span> WhatSApp</button>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            
+        </div>
+
+        <div class="test">
+            <h2 class="bold">Получите расчет стоимости дома вашей мечты из <br> клееного бруса пройдя мини тест за 1 минуту</h2>
+        </div>
+    </div>
+
+    <div class="portfolio">
+        <div class="portfolio-content">
+            <h3 class="medium portfolio-title">Наше портфолио - наша гордость</h3>
+            <h2 class="bold">Убедитесь в этом сами, посмотрев несколько последних <br> объектов, которые мы закончили строить в этом году</h2>
+            <div class="portfolio-example flex-block">
+                <div class="ex-img ">
+                    <img src="./assets/houseMini1.png" class="ex-img-main">
+                    <img src="./assets/houseMini2.png" class="ex-img-space">
+                    <img src="./assets/houseMini3.png" class="ex-img-space">
+                    <img src="./assets/houseMini4.png">
+                </div>
+                <div class="ex-content">
+                    <h4 class="bold">Дом 270 м. к.в в поселке Анколово</h4>
+                    <div class="ex-options flex-block">
+                        <div class="icon icon-vertical"></div>
+                        <p class="bold">Под ключ за 45 дней</p>
+                        <div class="icon icon-vertical"></div>
+                        <p class="bold">Площадь - 270 кв.м.</p>
+                        <div class="icon icon-vertical"></div>
+                        <p class="bold">Общий бюджет -15,5 млн.р.</p>
+                    </div>
+                    <img src="./assets/scheme1.png" class="scheme-space">
+                    <img src="./assets/scheme2.png">
+                    <div class="ex-footer flex-block">
+                        <p class="bold">открыть отзыв клиента</p>
+                        <button class="bold">заказать смету на подобный объект</button>
+                    </div>
+                </div>
+
+            </div>
         </div>
     </div>
 
